--- a/www.nass.gov.ng/d4dfa47bb5151b685094be141c2b8a941c797862.yml
+++ b/www.nass.gov.ng/d4dfa47bb5151b685094be141c2b8a941c797862.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:06:58 GMT
+    - Thu, 22 Mar 2018 00:07:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lxUihBHXq1l%2C3IgdkX32R1; path=/
+    - PHPSESSID=%2CU58XU9PrHfE4Zc2O89yf1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:06:58 GMT
+recorded_at: Thu, 22 Mar 2018 00:07:38 GMT
