--- a/www.nass.gov.ng/6e9fe66ca2da16a7f57092a3cce85b9212127ad6.yml
+++ b/www.nass.gov.ng/6e9fe66ca2da16a7f57092a3cce85b9212127ad6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:11:16 GMT
+    - Thu, 22 Mar 2018 00:11:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=n0uBtdBYnf%2CrsaJUPLvr92; path=/
+    - PHPSESSID=cTzEqkMdIcfkelSip87gd1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:11:16 GMT
+recorded_at: Thu, 22 Mar 2018 00:11:33 GMT
