--- a/www.nass.gov.ng/6412454cdffd05bfad8e7cffa185e7a5a375cd9c.yml
+++ b/www.nass.gov.ng/6412454cdffd05bfad8e7cffa185e7a5a375cd9c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:14:39 GMT
+    - Thu, 22 Mar 2018 00:13:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JwslCL2%2ChW7veACIbcJLB3; path=/
+    - PHPSESSID=SRCZ7xquow2G89GIO6Mro1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:14:39 GMT
+recorded_at: Thu, 22 Mar 2018 00:13:29 GMT
