--- a/www.nass.gov.ng/eac6742352fe806d1b1c080e926ddd8bd3afc30b.yml
+++ b/www.nass.gov.ng/eac6742352fe806d1b1c080e926ddd8bd3afc30b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:33:15 GMT
+    - Thu, 22 Mar 2018 00:34:24 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Ct3ixyVVhTGs1N7oMikUJ2; path=/
+    - PHPSESSID=Hqgl4gqpvUqRS-sS-3ZAn2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:33:15 GMT
+recorded_at: Thu, 22 Mar 2018 00:34:25 GMT
