--- a/www.nass.gov.ng/cc8ed951878d9ed229b019eac552e8ec89ec9f09.yml
+++ b/www.nass.gov.ng/cc8ed951878d9ed229b019eac552e8ec89ec9f09.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:37:46 GMT
+    - Thu, 22 Mar 2018 00:38:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NltJJyyDLSA3Txixbg9u-2; path=/
+    - PHPSESSID=dZ-2e5mYOm8oZpV%2Cj-sXu0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:37:47 GMT
+recorded_at: Thu, 22 Mar 2018 00:38:30 GMT
