--- a/www.nass.gov.ng/c20b15ef02c4776e2a700938f273c516dc12c256.yml
+++ b/www.nass.gov.ng/c20b15ef02c4776e2a700938f273c516dc12c256.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:42:47 GMT
+    - Thu, 22 Mar 2018 00:42:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kQqrF4wrApdJHDW3QMYZb0; path=/
+    - PHPSESSID=GRB%2CJ3Ej4hzRZA52FbWrt3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:42:47 GMT
+recorded_at: Thu, 22 Mar 2018 00:42:33 GMT
