--- a/www.nass.gov.ng/ff2db6bba73b8b3ea1e4b3c3080914e19ce00204.yml
+++ b/www.nass.gov.ng/ff2db6bba73b8b3ea1e4b3c3080914e19ce00204.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:48:13 GMT
+    - Thu, 22 Mar 2018 00:46:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=c5y6byqX82SitZ1nRHNgl1; path=/
+    - PHPSESSID=%2CF8aoagJKwutdWWpF2Kch1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:48:13 GMT
+recorded_at: Thu, 22 Mar 2018 00:46:59 GMT
