--- a/www.nass.gov.ng/066da46ef15c6b205d0cb821bc7927a80a92a3c9.yml
+++ b/www.nass.gov.ng/066da46ef15c6b205d0cb821bc7927a80a92a3c9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:49:33 GMT
+    - Thu, 22 Mar 2018 00:48:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Grn6liR7hCMDkIQQPCrj43; path=/
+    - PHPSESSID=hduhcpaTp3Cde0ns%2CkbFb0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:49:33 GMT
+recorded_at: Thu, 22 Mar 2018 00:48:55 GMT
