--- a/www.nass.gov.ng/5a6505a156b29bc998c7a9a5661fa537c1a10bd0.yml
+++ b/www.nass.gov.ng/5a6505a156b29bc998c7a9a5661fa537c1a10bd0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:49:51 GMT
+    - Thu, 22 Mar 2018 00:49:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=doBMgZNoStBdyIHEAYAoW0; path=/
+    - PHPSESSID=EQ11KVCjMQ029L%2Cu61uO22; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:49:51 GMT
+recorded_at: Thu, 22 Mar 2018 00:49:53 GMT
