--- a/www.nass.gov.ng/1aabcb6bdc9a4bfd289d79419c529428784fa467.yml
+++ b/www.nass.gov.ng/1aabcb6bdc9a4bfd289d79419c529428784fa467.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:58:24 GMT
+    - Thu, 22 Mar 2018 00:57:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=oVIhkeJSCaYu9xS3zQFKv0; path=/
+    - PHPSESSID=5YuRV7u%2Clfb1AOHTtTovH0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:58:25 GMT
+recorded_at: Thu, 22 Mar 2018 00:57:46 GMT
