--- a/www.nass.gov.ng/5b8dcc9944dff4185a0f6da94921840bff29f54f.yml
+++ b/www.nass.gov.ng/5b8dcc9944dff4185a0f6da94921840bff29f54f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 22:59:30 GMT
+    - Thu, 22 Mar 2018 00:58:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CB4tQYj980txHUCQ3Q11r2; path=/
+    - PHPSESSID=RYIR1yHarKhyITQtSowyl1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 22:59:30 GMT
+recorded_at: Thu, 22 Mar 2018 00:58:34 GMT
