--- a/www.nass.gov.ng/891a450ca4c953dea877c91534072647749d6066.yml
+++ b/www.nass.gov.ng/891a450ca4c953dea877c91534072647749d6066.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 23:15:49 GMT
+    - Thu, 22 Mar 2018 01:14:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WH6M4xm5CGRNMvL2%2CxHSj2; path=/
+    - PHPSESSID=JnpScyK%2CtiLoQBqhMW9aw1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 23:15:49 GMT
+recorded_at: Thu, 22 Mar 2018 01:14:02 GMT
