--- a/www.nass.gov.ng/028af9b422af9b733405780740bb40d295e9294b.yml
+++ b/www.nass.gov.ng/028af9b422af9b733405780740bb40d295e9294b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 20 Mar 2018 23:19:23 GMT
+    - Thu, 22 Mar 2018 01:16:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=nl68EN37LCJVK2QOK-emN3; path=/
+    - PHPSESSID=Zwh9%2C0HyTBnlttOBvW48g2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 20 Mar 2018 23:19:24 GMT
+recorded_at: Thu, 22 Mar 2018 01:16:00 GMT
