--- a/www.nass.gov.ng/3d86c741544627747d8b842090765232f9684ecb.yml
+++ b/www.nass.gov.ng/3d86c741544627747d8b842090765232f9684ecb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:16:05 GMT
+    - Thu, 22 Mar 2018 12:53:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Yw9WYADZO%2C-uHo-xJ4Ba%2C0; path=/
+    - PHPSESSID=acFz4aXhRYvnAgBvzOEWX1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:16:06 GMT
+recorded_at: Thu, 22 Mar 2018 12:53:08 GMT
