--- a/www.nass.gov.ng/3f7ced6a6b559d7b2eacbc0b3df122041c32d2e9.yml
+++ b/www.nass.gov.ng/3f7ced6a6b559d7b2eacbc0b3df122041c32d2e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:17:46 GMT
+    - Thu, 22 Mar 2018 12:55:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CA3bfJIlAPMqAQ1VKdJ5d3; path=/
+    - PHPSESSID=w8DvfvY3oJQ6MZYD6QDKx0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:17:46 GMT
+recorded_at: Thu, 22 Mar 2018 12:55:11 GMT
