--- a/www.nass.gov.ng/78b5cc45043355743d033ce7d5cf2ad81ae260f0.yml
+++ b/www.nass.gov.ng/78b5cc45043355743d033ce7d5cf2ad81ae260f0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:32:50 GMT
+    - Thu, 22 Mar 2018 13:06:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ehWn9L3p5C49aJ6ldcrb%2C0; path=/
+    - PHPSESSID=Y%2CfnvgV6BuUZKQoiZYBxR2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:32:50 GMT
+recorded_at: Thu, 22 Mar 2018 13:06:20 GMT
