--- a/www.nass.gov.ng/e0dbc5d3f1e3a20be83665e8403c71836b1b063d.yml
+++ b/www.nass.gov.ng/e0dbc5d3f1e3a20be83665e8403c71836b1b063d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:35:30 GMT
+    - Thu, 22 Mar 2018 13:09:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5tzD02DHo3LhbnTtU4Ry%2C2; path=/
+    - PHPSESSID=btxDzrcRjR-1d9H2JUeuY0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:35:30 GMT
+recorded_at: Thu, 22 Mar 2018 13:09:05 GMT
