--- a/www.nass.gov.ng/8d41c26dff5703de26b8d01e4efae85b552d0339.yml
+++ b/www.nass.gov.ng/8d41c26dff5703de26b8d01e4efae85b552d0339.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:36:24 GMT
+    - Thu, 22 Mar 2018 13:09:42 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=ytL1BF38DVm106E%2CRRVkN1; path=/
+    - PHPSESSID=MDs5xHxx0OKv9JJ9JOCdA2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:36:25 GMT
+recorded_at: Thu, 22 Mar 2018 13:09:42 GMT
