--- a/www.nass.gov.ng/926525bb7d4257757c744bb7d6b97f6aac902828.yml
+++ b/www.nass.gov.ng/926525bb7d4257757c744bb7d6b97f6aac902828.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:38:55 GMT
+    - Thu, 22 Mar 2018 13:13:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TH8Kyz5VN9XVNCxcsLvpC2; path=/
+    - PHPSESSID=sibj-o21%2CAvJzPLlriAaj0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:38:55 GMT
+recorded_at: Thu, 22 Mar 2018 13:13:03 GMT
