--- a/www.nass.gov.ng/f868b36d8e39ad9fa96dd7833d1cbef80c5b5fc2.yml
+++ b/www.nass.gov.ng/f868b36d8e39ad9fa96dd7833d1cbef80c5b5fc2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:41:11 GMT
+    - Thu, 22 Mar 2018 13:15:22 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=v5seXM%2Cpu1BGCKcQjWTuU2; path=/
+    - PHPSESSID=LZ%2CHwKNmJR1qkrGHYi38M3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:41:12 GMT
+recorded_at: Thu, 22 Mar 2018 13:15:22 GMT
