--- a/www.nass.gov.ng/0e66ca2aeda5759e855c819263b1b6c836b3a74b.yml
+++ b/www.nass.gov.ng/0e66ca2aeda5759e855c819263b1b6c836b3a74b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:41:28 GMT
+    - Thu, 22 Mar 2018 13:16:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=q6%2COLKmFCMXSmggoAT0ip0; path=/
+    - PHPSESSID=guzoQCqt2%2C0ynP6zdFqg21; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:41:29 GMT
+recorded_at: Thu, 22 Mar 2018 13:16:06 GMT
