--- a/www.nass.gov.ng/f1d0a4734bfef15c605c9909b5db4c7f1fe6c99b.yml
+++ b/www.nass.gov.ng/f1d0a4734bfef15c605c9909b5db4c7f1fe6c99b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:43:01 GMT
+    - Thu, 22 Mar 2018 13:18:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9QiIodCb1%2CMMwpM6R9%2C6d2; path=/
+    - PHPSESSID=c2xDo9EcVEd-A43PLOQVk0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:43:01 GMT
+recorded_at: Thu, 22 Mar 2018 13:18:11 GMT
