--- a/www.nass.gov.ng/eaf5f46877e1ac1fe02c09828419d58492589aef.yml
+++ b/www.nass.gov.ng/eaf5f46877e1ac1fe02c09828419d58492589aef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:45:02 GMT
+    - Thu, 22 Mar 2018 13:19:33 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kQdkbr2Q80qFQCV4u7rgb1; path=/
+    - PHPSESSID=%2CzHAdbs3KxNu8GND-0Zpv3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:45:02 GMT
+recorded_at: Thu, 22 Mar 2018 13:19:33 GMT
