--- a/www.nass.gov.ng/b08a23fd8a9ffe5fb976737a6183e50112ce1efd.yml
+++ b/www.nass.gov.ng/b08a23fd8a9ffe5fb976737a6183e50112ce1efd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 21 Mar 2018 22:49:14 GMT
+    - Thu, 22 Mar 2018 13:23:38 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Cw0g6TCkNIUmvrumRgWeR0; path=/
+    - PHPSESSID=9p7zX%2CyTgohKcxBDU7tpH0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 21 Mar 2018 22:49:14 GMT
+recorded_at: Thu, 22 Mar 2018 13:23:38 GMT
